# rust-one-binary-poc

./: .gitignore  Cargo.toml  LICENSE  README.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/lib/: rust-logo.svelte  svelte-logo.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/items/[id]/: +page.svelte
src/: db.rs  lib.rs  main.rs
