[profile.release]
opt-level = "z"
lto = "thin" 
codegen-units = 1
panic = "abort"
strip = true 

[package]
name = "rust-one-binary-poc"
version = "0.1.0"
edition = "2024"

[dependencies]
mime_guess = "2.0.5"
rust-embed = { version = "8.6.0", features = ["debug-embed"] }
axum = { version = "0.8.1" }
tokio = { version = "1", features = ["full"] }
sled = "0.34.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rustls-acme = { version = "0.14.0", features = ["tls12", "axum", "tower", "tokio"] }
tokio-stream = "0.1.17"
axum-server = "0.7.2"
rustls-pemfile = "2.2.0"
